强化人脸隐私遮挡规则：AuditRedrawService与short-drama-director SKILL同步更新逐格自检逻辑